Updated internal link routes

--- a/content/blog/2020_annual_review/index.mdx
+++ b/content/blog/2020_annual_review/index.mdx
@@ -26,7 +26,7 @@ For the first time, I started using social media in a [way](/article/5f3bfc27fe6
 
 After years of hesitation, I have finally published this blog itself and overcame the fear of writing, learning, and building in public. 
 
-Lastly, I laid the foundations for a note-taking tool called [Gems](https://gemsnotes.app/). 
+Lastly, I laid the foundations for a note-taking tool called [Gems](/article/gems). 
 
 ## Memories
 It'll be hard to forget more than 60 days locked at home with the silence around broken only by the ambulance sirens and the sound of mourning bells. I basically spent the year in my bedroom studying and working. Before the beginning of the pandemic, some of my former classmates from primary school had the brilliant idea to have dinner together 15 years later. After that, I only went 4 days to Prague in July to celebrate a friend's graduation in medicine and I met a few others just once or twice. Although they were rather short and sporadic experiences, I am grateful for their emotional intensity. The past 12 months have shown me that remote working is possible and it also has some advantages but nothing replaces the serendipity and alchemy of in-person meetings that make memories great. 
