--- a/content/blog/2021_annual_review/index.mdx
+++ b/content/blog/2021_annual_review/index.mdx
@@ -9,7 +9,7 @@ banner: ./banner.jpg
 ---
 My 2021 was primarily focused on training an innovator mindset. 
 
-Since I have started as a self-taught developer at 16, I have spent almost a decade learning how to build solutions. I was in the inventor’s mindset of *“Build it and they will come”*. This is the default setup everyone has in the first place. I have not yet met a successful founder who has not started and failed this way at least once in the beginning. Unfortunately, it takes a lot more than building an MVP over a weekend to **make something people want**. And there is no way to learn it on paper. You have to go down to the arena. That’s why [I quit my job](https://ittaboba.com/article/quit-my-job) in March 2021 and started this journey working on [Gems](https://gemsnotes.app/).
+Since I have started as a self-taught developer at 16, I have spent almost a decade learning how to build solutions. I was in the inventor’s mindset of *“Build it and they will come”*. This is the default setup everyone has in the first place. I have not yet met a successful founder who has not started and failed this way at least once in the beginning. Unfortunately, it takes a lot more than building an MVP over a weekend to **make something people want**. And there is no way to learn it on paper. You have to go down to the arena. That’s why [I quit my job](/article/quit-my-job) in March 2021 and started this journey working on [Gems](/article/gems).
 
 ## Things learned
 It would actually take a whole book to explain all the things I have learned in 2021. And I would have liked to write a few posts if I had the time. My apologies, it has been a very busy year. I will catch up on this at some point. In the meantime, here are some highlights:
