--- a/content/blog/how_to_read_a_book/how_to_read_a_book.mdx
+++ b/content/blog/how_to_read_a_book/how_to_read_a_book.mdx
@@ -270,4 +270,4 @@ Each level of reading poses different questions. Adler and Van Doren defined dif
 - **Conceptual notes**: questions answered by analytical reading are about the truth and significance of the book (the author's concepts). 
 - **Dialectical notes**: questions answered by syntopical reading are about the discussion between the authors and you
 
-I usually write [atomic notes](/article/creativity-factory) and I find the above distinction particularly helpful. I start from the standard questions provided in the previous sections and try to answer them with the notes and the map I took while reading. Then I integrate them with more sophisticated questions and I keep the structural, conceptual, and dialectical notes in [Gems](https://gemsnotes.app/). This is especially helpful to read and think syntopically.
+I usually write [atomic notes](/article/creativity-factory) and I find the above distinction particularly helpful. I start from the standard questions provided in the previous sections and try to answer them with the notes and the map I took while reading. Then I integrate them with more sophisticated questions and I keep the structural, conceptual, and dialectical notes in [Gems](/article/gems). This is especially helpful to read and think syntopically.
