--- a/content/blog/lego_thoughts/index.mdx
+++ b/content/blog/lego_thoughts/index.mdx
@@ -46,6 +46,6 @@ Again, **the shape and space you give to information have consequences on knowle
 
 It's now like playing LEGO with my thoughts. I consume content through new lenses. I actually interact with it to take notes. Then I combine the bricks to explore and find unexpected insights. The goal is not to remember more things, which is often the main expectation when taking notes. To me, the purpose is to have a **tool that turns information into ready-to-use knowledge to learn and create better content faster**. Notebooks are not equally effective because the information is locked in silos and ideas don't talk to each other.
 
-I am now building a dedicated [app](https://gemsnotes.app/) to support my learning and creative efforts for years to come. This same article was written in a few hours combining some notes together.
+I am now building a dedicated [app](/article/gems) to support my learning and creative efforts for years to come. This same article was written in a few hours combining some notes together.
 
 *Some information is based on “Too Big to Know” by David Weinberger which I have read and recommend (no affiliation).*
