--- a/content/blog/2020_activity_spreadsheet/index.mdx
+++ b/content/blog/2020_activity_spreadsheet/index.mdx
@@ -19,7 +19,7 @@ I have divided my activities into the following 8 categories and assigned to eac
         <span style={{color: "rgb(61, 155, 37)", fontWeight: "bold"}}>Study</span> (reading, master's in machine learning and AI, online courses...)
     </li>
     <li>
-        <span style={{color: "rgb(246, 218, 16)", fontWeight: "bold"}}>Side projects</span> (building this blog, building <a href="https://gemsnotes.app/" active="_blank">Gems</a>, writing articles...)
+        <span style={{color: "rgb(246, 218, 16)", fontWeight: "bold"}}>Side projects</span> (building this blog, building <a href="/article/gems" active="_blank">Gems</a>, writing articles...)
     </li>
     <li>
         <span style={{color: "rgb(249, 6, 6)", fontWeight: "bold"}}>Sport</span> (running and exercise)
