Gems post updated

--- a/content/projects/gems/gems.mdx
+++ b/content/projects/gems/gems.mdx
@@ -1,14 +1,14 @@
 ---
-title: "Gems - AI-powered research assistant"
+title: "Gems - AI-powered thinking partner"
 slug: gems
 date: "2022-06-26"
 author: Lorenzo Bernaschina
 banner: ./banner.jpg
 banner_caption: Image courtesy Aleksandr Reva
-description: Note-taking web app to visually manage notes with the help of AI. Uncover hidden insights in your written files faster.
+description: Personal knowledge management tool to explore and connect ideas visually with the help of AI. Uncover hidden insights in your written files faster.
 type: project
 ---
-[Gems](https://gemsnotes.app/) is a web based note-taking and information retrieval SaaS to visually organize and sift through your written files and notes. 
+[Gems](https://gemsnotes.app/) is a personal knowledge management tool to explore and connect ideas visually with the help of AI.
 
 ![Whiteboard](whiteboard.jpg "Gems sample screen")
 
@@ -16,7 +16,7 @@ The total amount of information in the world is growing exponentially. Informati
 
 ![Knowledge doubling curve](knowledge-curve.jpg "Knowledge doubling curve")
 
-Today knowledge workers are drowning in information they don’t have time to process. We save interesting web articles and social posts we rarely revisit. We have messy desktops and folders. We have many books we barely have time to read, let alone interpret and digest. Same for newsletters, blogs, podcasts etc. 
+Today knowledge workers are drowning in information they don’t have time to process. We save interesting web articles and social posts we rarely revisit. We have messy desktops and folders. We have many books we barely have time to read, let alone interpret and digest. Same for newsletters, videos, podcasts etc. 
 
 If we want to **make sense of this flood of information and make use of it** we currently have two options: 
 1. On one side, we have **note-taking tools** and **cloud storage services**. They are built around hierarchical file directories (folders) which are the digital equivalent of the filing cabinets or shelves we had before the existence of computers and software. Back in the early days of personal computers and [GUIs](https://en.wikipedia.org/wiki/Graphical_user_interface), designers needed to make them as familiar as possible to users. So they made [skeuomorphic](https://www.interaction-design.org/literature/topics/skeuomorphism) adaptations of the Desktop, the Trash, etc. Similarly, it felt natural to keep digital information organized as the physical one. It was easier to be adopted by users but the drawback was it didn’t leverage the full potential of the new tool. It’s hard to keep information updated, create cross-references, find patterns, surface ideas, or even just find something in filing cabinets and shelves (the [Zettelkasten of Niklas Luhmann](/article/zettelkasten) is probably the most audacious endeavor in this regard). These limits are reflected in file directories.
